practices/test_checker/P1/Face/exercise1/ERROR/12.c

/* Here, you must include the required libraries */
#include <stdio.h>
void main(){
		char name[80];
		int age;
		float weight;
		
		
		
		printf("Please, entry your name: ");
		scanf("%s",&name);

		printf("Please, entry your age: ");
		scanf("%int",&age);
		
		printf("Please, entry your weight: ");
		scanf("%f",&weight);
		
		printf("\n\ \n\My name is %s and I am %i years old. My weight is %f kg.",name,age,weight);
	
	
	
	
	
	
	
}
